--- a/analise/analise-desempenho.ipynb
+++ b/analise/analise-desempenho.ipynb
@@ -7,9 +7,15 @@
    "source": [
     "# Assistente de Concessionária — Indicadores & Métricas\n",
     "\n",
+    "Neste _notebook_, serão apresentados alguns indicadores e algumas métricas de desempenho do _chatbot_.\n",
+    "\n",
     "## 1 - Preparar o conjunto de dados\n",
     "\n",
-    "### 1.1 - Carregar conjunto de dados"
+    "É necessário avaliar o conjunto de dados para prepará-lo para a análise; verificar se não há erros e/ou inconsistências.\n",
+    "\n",
+    "### 1.1 - Carregar conjunto de dados\n",
+    "\n",
+    "Começamos carregando o dito conjunto de dados."
    ]
   },
   {
@@ -26,6 +32,29 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "ccbbaf10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199 mensagens\n"
+     ]
+    }
+   ],
+   "source": [
+    "def carregar_dataset() -> pd.DataFrame:\n",
+    "    return pd.read_csv('mensagens.csv', sep=';', index_col=False)\n",
+    "\n",
+    "df_mensagens = carregar_dataset()\n",
+    "\n",
+    "print(f'{len(df_mensagens)} mensagens')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cf39f7d3",
    "metadata": {},
    "outputs": [
     {
@@ -117,17 +146,12 @@
        "4                                    NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def carregar_dataset() -> pd.DataFrame:\n",
-    "    return pd.read_csv('mensagens.csv', sep=';', index_col=False)\n",
-    "\n",
-    "df_mensagens = carregar_dataset()\n",
-    "\n",
     "df_mensagens.head()"
    ]
   },
@@ -143,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e755f786",
    "metadata": {},
    "outputs": [
@@ -181,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "32d51888",
    "metadata": {},
    "outputs": [
@@ -243,7 +267,7 @@
        "4 2021-05-20 21:24:00"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8a78155b",
    "metadata": {},
    "outputs": [
@@ -372,7 +396,7 @@
        "4 2021-05-20 21:24:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8d206a8f",
    "metadata": {},
    "outputs": [
@@ -453,7 +477,7 @@
        "4                    []                                       []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52dfecc5",
+   "id": "1096458b",
    "metadata": {},
    "source": [
     "Quais são os tamanhos mínimo e máximo dessas listas?"
@@ -480,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6733d216",
    "metadata": {},
    "outputs": [
@@ -489,7 +513,7 @@
      "output_type": "stream",
      "text": [
       "intencoes: (1, 1)\n",
-      "entidades: (1, 2)\n"
+      "entidades: (1, 3)\n"
      ]
     }
    ],
@@ -517,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e1bec064",
    "metadata": {},
    "outputs": [
@@ -526,7 +550,7 @@
      "output_type": "stream",
      "text": [
       "intencoes: (0, 1)\n",
-      "entidades: (0, 2)\n"
+      "entidades: (0, 3)\n"
      ]
     }
    ],
@@ -554,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8b0e27a7",
    "metadata": {},
    "outputs": [
@@ -569,7 +593,7 @@
        "Name: entidades, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a7b26fc",
+   "id": "7525d697",
    "metadata": {},
    "source": [
     "Isso resultou em listas vazias ou apenas com tuplas de 2 elementos?"
@@ -606,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "09a90914",
    "metadata": {},
    "outputs": [
@@ -616,7 +640,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,6 +660,16 @@
     "filtro_listas_entidades_validas = filtro_listas_entidades_vazias | filtro_listas_entidades_tuplas_2_elementos\n",
     "\n",
     "filtro_listas_entidades_validas.all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2f2e3ca",
+   "metadata": {},
+   "source": [
+    "## 2 - Indicadores\n",
+    "\n",
+    "Extrair os dados dos indicadores e apresentá-los em gráficos."
    ]
   }
  ],
