--- a/analise/analise-desempenho.ipynb
+++ b/analise/analise-desempenho.ipynb
@@ -710,7 +710,7 @@
    "id": "8acc5e84",
    "metadata": {},
    "source": [
-    "### 2.1.2 - Mensagens por dia\n",
+    "#### 2.1.2 - Contagem\n",
     "\n",
     "Contar o número de mensagens por dia."
    ]
@@ -768,6 +768,16 @@
     "}\n",
     "\n",
     "mensagens_por_dia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea335717",
+   "metadata": {},
+   "source": [
+    "#### 2.1.3 - Gráfico\n",
+    "\n",
+    "Apresentar o gráfico de mensagens por dia, ao longo do tempo."
    ]
   },
   {
