Pequenos ajustes no notebook.

--- a/analise/analise-desempenho.ipynb
+++ b/analise/analise-desempenho.ipynb
@@ -725,7 +725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 dias\n"
+      "Intervalo de 4 dias\n"
      ]
     }
    ],
@@ -736,7 +736,7 @@
     "intervalo_datas = [data_mais_antiga + timedelta(days=d) for d in range(numero_dias_intervalo_datas)]\n",
     "intervalo_dias_seguintes = [data + timedelta(days=1) for data in intervalo_datas]\n",
     "\n",
-    "print(f'{numero_dias_intervalo_datas} dias')"
+    "print(f'Intervalo de {numero_dias_intervalo_datas} dias')"
    ]
   },
   {
@@ -744,30 +744,14 @@
    "execution_count": 14,
    "id": "70d12666",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{datetime.date(2021, 5, 20): 7,\n",
-       " datetime.date(2021, 5, 21): 0,\n",
-       " datetime.date(2021, 5, 22): 40,\n",
-       " datetime.date(2021, 5, 23): 152}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_datas_mensagens = df_mensagens['data_horario'].apply(datetime.date)\n",
     "\n",
     "mensagens_por_dia = {\n",
     "    dia: ((serie_datas_mensagens >= dia) & (serie_datas_mensagens < dia_seguinte)).sum()\n",
     "    for (dia, dia_seguinte) in zip(intervalo_datas, intervalo_dias_seguintes)\n",
-    "}\n",
-    "\n",
-    "mensagens_por_dia"
+    "}"
    ]
   },
   {
@@ -837,35 +821,11 @@
    "execution_count": 16,
    "id": "d2bab024",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'#recomendar-modelo': 22,\n",
-       "         '#avaliar-por-categoria': 7,\n",
-       "         '#capacidade-passageiros-familia-grande': 1,\n",
-       "         '#avaliar-por-finalidade': 11,\n",
-       "         '#confirmacao': 67,\n",
-       "         '#agendar-test-drive': 5,\n",
-       "         '#capacidade-passageiros-solteiro': 3,\n",
-       "         '#declinacao': 23,\n",
-       "         '#avaliar-por-capacidade-passageiros': 4,\n",
-       "         '#comprar-veiculo': 4,\n",
-       "         '#capacidade-passageiros-casal': 4,\n",
-       "         '#capacidade-passageiros-familia': 3})"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
-    "contagem_intencoes = Counter(intencao for lista in df_mensagens['intencoes'] for intencao in lista)\n",
-    "\n",
-    "contagem_intencoes"
+    "contagem_intencoes = Counter(intencao for lista in df_mensagens['intencoes'] for intencao in lista)"
    ]
   },
   {
@@ -951,31 +911,13 @@
    "execution_count": 19,
    "id": "90065f08",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'#recomendar-modelo': 0.34375,\n",
-       " '#avaliar-por-finalidade': 0.171875,\n",
-       " '#avaliar-por-categoria': 0.109375,\n",
-       " '#agendar-test-drive': 0.078125,\n",
-       " '#capacidade-passageiros-casal': 0.0625,\n",
-       " 'Outras': 0.234375}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "contagem_intencoes_com_outros = dict(sorted(list(contagem_intencoes.items())[-5:], key=lambda x: -x[1]))\n",
     "contagem_intencoes_com_outros['Outras'] = sum(list(contagem_intencoes.values())[:-5])\n",
     "\n",
     "contagem_total_intencoes = sum(contagem_intencoes_com_outros.values())\n",
-    "contagem_intencoes_com_outros = {k: v/contagem_total_intencoes for (k,v) in contagem_intencoes_com_outros.items()}\n",
-    "\n",
-    "contagem_intencoes_com_outros"
+    "contagem_intencoes_com_outros = {k: v/contagem_total_intencoes for (k,v) in contagem_intencoes_com_outros.items()}"
    ]
   },
   {
